sec.Methode: emp. Hypo

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -18,13 +18,15 @@ Die gesamte Arbeit dauerte von der Erstellung der Disposition im Herbstsemester 
 \subsection{Design \& Operationalisiserung} \label{sec:Design}
 Bei der vorliegenden Studie handelt es sich um eine empirische Querschnitts-Studie mit quantitativem Charakter. Aus ökonomischer Sicht und bezüglich einem hohen Mass an Standardisierung \cite[S.~86ff]{sedlmeier2008} wurde eine schriftliche Befragung via Internet-Fragebogen durchgeführt. Dadurch konnten die Befragten leichter kontaktiert und ein höherer Grad an Anonymität erreicht werden. Dazu wurden die für die Hypothesen relevanten Parameter empirisch erhoben und mittels deskriptiver Statistik ausgewertet. Der Fragebogen wurde in deutscher Sprache verfasst, weshalb die Rekrutierung ausschliesslich in der deutschsprachigen Schweiz erfolgte. Eine Übersetzung der Umfrage in weiter Sprachen hätte den Umfang dieser Arbeit gesprengt, da die einzelnen Fragebögen durch eine der wissenschaft genügenden Hin- und Rückübersetzung durch Personen aus den beiden Muttersprachen zu erfolgen gehabt hätte \cite{Pfetsch2016}.
 
+Bezüglich Minimierung von Risiken für die Versuchspersonen wurden keine spezifischen Vorkehrungen getroffen, da von einer Unbedenklichkeit des Fragebogens bezüglich ethischen Richtlinien ausgegangen wird.
+
 Im Folgenden werden die Stichprobenumfangsplanung und die einzelnen für die Beantwortung der Fragestellung notwendiger Konstrukte näher erläutert und operationalisiert.
 
 \subsubsection{Stichprobenumfangsplanung}\label{sec:Stichprobenumfangsplanung}
 Gemäss Fragestellung wird eine Stichprobengrösse von insgesamt 210 Personen angestrebt. Diese Stichprobengrösse wurde mittels G*Power \cite{Faul2009} für eine einfaktorielle Varianzanalyse gemäss \citeA{Rasch2014} ermittelt (F-Test - ANOVA: Fixed effects, omnibus, one-way).
 Für die Stichprobenumfangsplanung wird ein mittlerer Effekt \cite{Cohen1988a} als inhaltlich relevant festgelegt: $f = 0.25$ resp. $\Omega^2 = 0.06$. Das Signifikanzniveau beträgt $\alpha=0.05$. Die Teststärke soll mindesten $1-\beta=0.95$ betragen. Es werden zwei Gruppen für den Faktor Bindung benötigt (sicher und unsicher).
 
-Für die Beantwortung des Zusammenhangs zwischen Medienverhalten und subjektiven Wohlbefinden wird eine lineare Regressionsanalyse durchgeführt. Das Kriterium bildet das subjektive Wohlbefinden und der Prädiktor das Medienverhalten. Die Stichprobengrösse für die Beantwortung dieser Fragestellung wurde wieder mittels G*Power für eine Korrelation berechnet. Gemäss der Einteilung von \citeA{Cohen1988a} wird ein mittlerer Effekt von $f=.3$ erwartet, was einem Korrealtionskoeffizient $r$ nach Bravais-Pearson von $|r|=.3$ entspricht. Das Signifikanzniveau beträgt $\alpha=0.05$. Die Teststärke soll mindesten $1-\beta=0.95$ betragen. Daraus ergibt sich eine Stichprobengrösse von 138 Probanden.
+Für die Beantwortung des Zusammenhangs zwischen Medienverhalten und subjektiven Wohlbefinden wird eine lineare Regressionsanalyse durchgeführt. Das Kriterium bildet das subjektive Wohlbefinden und der Prädiktor das Medienverhalten. Die Stichprobengrösse für die Beantwortung dieser Fragestellung wurde wieder mittels G*Power für eine Korrelation zweiseitig berechnet, da ein ungerichteter Zusammenhang angenommen wird. Gemäss der Einteilung von \citeA{Cohen1988a} wird ein mittlerer Effekt von $f=.3$ erwartet, was einem Korrealtionskoeffizient $r$ nach Bravais-Pearson von $|r|=.3$ entspricht. Das Signifikanzniveau beträgt $\alpha=0.05$. Die Teststärke soll mindesten $1-\beta=0.95$ betragen. Daraus ergibt sich eine Stichprobengrösse von 138 Probanden.
 
 \subsubsection{Soziodemografische Daten}\label{sec:SoziodemografischeDaten}
 Bei den soziodemografischen Daten wurden folgende Parameter erfasst: Geschlecht, Jahrgang (Alter), Alter des Kindes in Monaten, Geschlecht des Kindes, brutto Familieneinkommen gemäss \citeA{NZZ2014}, Bildungsabschluss gemäss \citeA{Bfsnd}, Anzahl Personen im gleichen Haushalt, Lebensform, Anzahl Tage, an denen das Kind fremdbetreut ist und der durchschnittliche Betreuungsaufwand pro Woche.
@@ -165,16 +167,6 @@ Nach der Datenbereinigung blieben netto 218 Personen übrig (87.9\%). Eine Perso
 
 Die Merkmale Geschlecht, Alter in Jahren, Geschlecht Kind und Alter Kind in Jahren werden in Tabelle \titleref{table:Stichprobe} dargestellt (eine um die Merkmale Familieneinkommen, Bidlungsabschluss, Anzahl Personen im Haushalt, Lebensfrom und Fremdbetreuung in Tagen ist in Tabelle \ref{table:Gesamtstichprobe} Anhang \ref{app:Gesamtstichprobe} zu finden).
 
-Das Alter der Befragten liegt zwischen 20 und 48 Jahre mit einem Durchschnittsalter von 33.9 Jahren ($SD$ = 4.5). Weibliche Probanden sind mit 90.8 \% ($n$ = 198) in der Stichprobe vertreten. Das Geschlecht der Kinder ist mit 44.5\% weiblichen ($n$ = 97) und 54.6\% männlichen ($n$ = 119) Kindern vertreten. Das Alter der Kinder liegt zwischen 0 und 12 Monaten mit einem Durchschnitt von 6.6 Monaten ($SD$ = 3.4).
-
-Bei der Angabe zum Familieneinkommen (siehe Tabelle \titleref{table:Gesamtstichprobe} im Anhang \ref{app:Gesamtstichprobe}) zeigt sich die stärkste Ausprägung bei Personen, die über ein Familieneinkommen von über CHF 104'001 und mehr verfügen mit 34.3\% ($n$ = 75), gefolgt von Familien mit einem Einkommen zwischen CHF 78'001 und CHF 104'000 mit 30.3\% ($n$ = 66) und Familien mit einem Einkommen zwischen CHF 52'000 und CHF 78'000 mit 23.9\% ($n$ = 52). 
-
-73 Personen gaben an über ein Uni oder Fachhochschultitel zu verfügen, was mit 33.5\% die höchste Ausprägung darstellt, dicht gefolgt von einem Lehrabschluss mit 23.9\% ($n$ = 52) und einem Abschluss an einer höheren Fachschule mit 22.9\% ($n$ = 50). Zusammenfassend ergibt das einen Abschluss im tertiären Bereich von 60.6\% ($n$ = 132), im Sekundar II Bereich von 36.6\% ($n$ = 79) und im Bereich der Grundschule 2.8\% ($n$ = 6).
-
-Im Durchschnitt leben zwischen 2 und 8 Personen im Haushalt mit einem Durchschnitt von 3.6 Personen ($SD$ = .8). Die dominante Lebensform stellt die verheiratete Partnerschaft mit 71.6\% ($n$ = 156) dar, gefolgt von der nicht verheirateten Partnerschaft mit 25.2\% ($n$ = 55). Die Kinder werden im Schnitt 1 Tag ($SD$ = 1.3)  zwischen 0 und 5 Tagen fremd betreut.
-
-Insgesamt haben 158 Personen am Wettbewerb teilgenommen, was 72.5\% der Stichprobe entspricht. Eine Person liess sich Versuchspersonen anrechnen (.5\%) und 59 (27\%) Personen wollten weder am Wettbewerb teilnehmen noch sich Versuchspersonenstunden anrechnen lassen.
-
 \begin{table}[htbp]
 \begin{tabular}{m{0.5em}  m{10em}  m{5em}} 
   \hline\hline
@@ -204,10 +196,38 @@ Insgesamt haben 158 Personen am Wettbewerb teilgenommen, was 72.5\% der Stichpro
 \label{table:Stichprobe}
 \end{table}
 
+Das Alter der Befragten liegt zwischen 20 und 48 Jahre mit einem Durchschnittsalter von 33.9 Jahren ($SD$ = 4.5). Weibliche Probanden sind mit 90.8 \% ($n$ = 198) in der Stichprobe vertreten. Das Geschlecht der Kinder ist mit 44.5\% weiblichen ($n$ = 97) und 54.6\% männlichen ($n$ = 119) Kindern vertreten. Das Alter der Kinder liegt zwischen 0 und 12 Monaten mit einem Durchschnitt von 6.6 Monaten ($SD$ = 3.4).
+
+Bei der Angabe zum Familieneinkommen (siehe Tabelle \titleref{table:Gesamtstichprobe} im Anhang \ref{app:Gesamtstichprobe}) zeigt sich die stärkste Ausprägung bei Personen, die über ein Familieneinkommen von über CHF 104'001 und mehr verfügen mit 34.3\% ($n$ = 75), gefolgt von Familien mit einem Einkommen zwischen CHF 78'001 und CHF 104'000 mit 30.3\% ($n$ = 66) und Familien mit einem Einkommen zwischen CHF 52'000 und CHF 78'000 mit 23.9\% ($n$ = 52). 
+
+73 Personen gaben an über ein Uni oder Fachhochschultitel zu verfügen, was mit 33.5\% die höchste Ausprägung darstellt, dicht gefolgt von einem Lehrabschluss mit 23.9\% ($n$ = 52) und einem Abschluss an einer höheren Fachschule mit 22.9\% ($n$ = 50). Zusammenfassend ergibt das einen Abschluss im tertiären Bereich von 60.6\% ($n$ = 132), im Sekundar II Bereich von 36.6\% ($n$ = 79) und im Bereich der Grundschule 2.8\% ($n$ = 6).
+
+Im Durchschnitt leben zwischen 2 und 8 Personen im Haushalt mit einem Durchschnitt von 3.6 Personen ($SD$ = .8). Die dominante Lebensform stellt die verheiratete Partnerschaft mit 71.6\% ($n$ = 156) dar, gefolgt von der nicht verheirateten Partnerschaft mit 25.2\% ($n$ = 55). Die Kinder werden im Schnitt 1 Tag ($SD$ = 1.3)  zwischen 0 und 5 Tagen fremd betreut.
+
+Insgesamt haben 158 Personen am Wettbewerb teilgenommen, was 72.5\% der Stichprobe entspricht. Eine Person liess sich Versuchspersonen anrechnen (.5\%) und 59 (27\%) Personen wollten weder am Wettbewerb teilnehmen noch sich Versuchspersonenstunden anrechnen lassen.
+
+
+
 \subsection{Empirische Hypothesen}\label{sec:EmpirischeHypothesen}
-TBD: Beispiel aus DGP Richtlinien - In der Bedingung 1 („gewalthaltiges Video“) ist die applizierte Menge scharfer Sauce im Durchschnitt höher als in der Bedingung 2 („nichtgewalthaltiges Video“).
+Im Folgenden werden die konzeptionellen Hypothesen aus Kapitel \titleref{sec:Fragestellung} in empirische Hypothesen überführt:
+
+(1) Die Mediennutzung von sicher gebundenen Eltern ist im Durchschnitt tiefer als diejenige der unsicher gebundenen Eltern.
+
+(2) Die Smartphonenutzung ist bei unsicher gebundenen Eltern im Durchschnitt höher als bei sicher gebundenen.
+
+(3) Eltern, deren Stressempfinden hoch ist, haben im Durchschnitt eine höhere Mediennutzung als Eltern, deren Stressempfindung tiefer ist.
+
+(4) Eltern, die eine tiefe Mediennutzung vorweisen, haben im Durchschnitt ein höheres subjektives Wohlbefinden.
 
 \subsection{Statistische Analyseverfahren}
-Für die Datenauswertung wurde in einem ersten Schritt eine deskriptive, univariate Analyse der Stichprobendaten durchgeführt. Dies ermöglichte die Erfassung möglicher Fehler bei der Datenerfassung und die Entdeckung möglicher Ausreisser im Datensatz. Dies erfolgte mittels Häufigkeitsverteilung, um die verschiedenen Merkmalsausprägungen einer Variable im Datensatz zu beschreiben, und mittels Verteilungsparameter (Lage- und Streuungsparameter). Des Weiteren wurde die Schiefe der Häufigkeitsverteilung gegenüber der Normalverteilung überprüft. Die Prüfung der Normalverteilung wurde mittels Sichtvergleich vorgenommen. Dazu wurde eine Grafik der Häufigkeitsverteilung der Stichprobendaten mit einem Bild einer Normalverteilung verglichen. Diese optische Prüfung erfolgte mit Hilfe von SPSS und der Darstellung eines Histogramms, das mit einer Häufigkeitsauszählung und der Darstellung der Normalverteilungskurve ausgegeben wurde. Ebenfalls mit SPSS wurde ein Q-Q-Diagram (Quantile-QuantilePlot) erstellt, um die Daten auf Normalverteilung zu prüfen. Das Q-Q-Diagram vergleicht Stichprobendaten mit einer Geraden, die eine Normalverteilung repräsentiert. Anschliessend an die deskriptive Analyse wurden in einem weiteren Schritt die statistischen Zusammenhänge der Stichprobendaten für die Haupthypothese und die Arbeitshypothesen berechnet.
+Für die Datenauswertung wurde in einem ersten Schritt eine deskriptive, univariate Analyse der Stichprobendaten durchgeführt. Dies ermöglichte die Erfassung möglicher Fehler bei der Datenerfassung und die Entdeckung möglicher Ausreisser im Datensatz. Dies erfolgte mittels Häufigkeitsverteilung, um die verschiedenen Merkmalsausprägungen einer Variable im Datensatz zu beschreiben, und mittels Verteilungsparameter (Lage- und Streuungsparameter). Des Weiteren wurde die Schiefe der Häufigkeitsverteilung gegenüber der Normalverteilung überprüft. Die Prüfung der Normalverteilung wurde mittels Sichtvergleich vorgenommen. Dazu wurde eine Grafik der Häufigkeitsverteilung der Stichprobendaten mit einem Bild einer Normalverteilung verglichen. Diese optische Prüfung erfolgte mit Hilfe von SPSS und der Darstellung eines Histogramms, das mit einer Häufigkeitsauszählung und der Darstellung der Normalverteilungskurve ausgegeben wurde. Ebenfalls mit SPSS wurde ein Q-Q-Diagram (Quantile-QuantilePlot) erstellt, um die Daten auf Normalverteilung zu prüfen. Das Q-Q-Diagram vergleicht Stichprobendaten mit einer Geraden, die eine Normalverteilung repräsentiert. Anschliessend an die deskriptive Analyse wurden in einem weiteren Schritt die statistischen Zusammenhänge der Stichprobendaten für die Hypothesen berechnet.
 
-\textit{TBD: Hypothesen beschreiben}
+Die statistischen Hypothesen sind wie folgt:
+
+\textbf{Hypothese 1:}
+
+\textbf{Hypothese 2:}
+
+\textbf{Hypothese 3:}
+
+\textbf{Hypothese 4:}
