sec:Methode und Ergebnisse: Hypothesen 1 - 4

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -102,11 +102,12 @@ Welchen Effekt hat der Bindungsstil und das aktuelle Stressempfinden der Eltern 
 \textbf{Hypothese 1:}
 Eltern mit einem sicheren Bindungsstil weisen eine geringere Mediennutzung im Beisein ihrer Kinder auf als Eltern, die einen unsicheren Bindungsstil aufweisen.
 
-\textbf{Hypothese 2:} Eltern mit einem unsicheren Bindungsstil benutzen das Smartphone im Beisein ihrer Kinder öfters, als sicher gebundene Eltern.
-
-\textbf{Hypothese 3:}
+\textbf{Hypothese 2:}
 Eltern, die ein hohes Ausmass an Stress empfinden, nutzen Medien im Beisein ihrer Kinder häufiger als Eltern, die ein niedriges Ausmass an Stress aufweisen.
 
-\textbf{Hypothese 4:}
+\textbf{Hypothese 3:}
 Eltern mit einem erhöhten Medienverhalten im Beisein ihrer Kinder weisen ein geringeres subjektives Wohlbefinden auf als Eltern, die ein geringeres Medienverhalten im Beisein ihrer Kinder aufweisen.
+
+\textbf{Hypothese 4:} 
+Eltern mit einem sicheren Bindungsstil weisen ein tieferes Stressempfinden und eine geringere Mediennutzung auf als Eltern, die einen unsicheren Bindungsstil aufweisen.
 
