--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -26,7 +26,7 @@ Im Folgenden werden die Stichprobenumfangsplanung und die einzelnen für die Bea
 Gemäss Fragestellung wird eine Stichprobengrösse von insgesamt 210 Personen angestrebt. Diese Stichprobengrösse wurde mittels G*Power \cite{Faul2009} für eine einfaktorielle Varianzanalyse gemäss \citeA{Rasch2014} ermittelt (F-Test - ANOVA: Fixed effects, omnibus, one-way).
 Für die Stichprobenumfangsplanung wird ein mittlerer Effekt \cite{Cohen1988a} als inhaltlich relevant festgelegt: $f = 0.25$ resp. $\Omega^2 = 0.06$. Das Signifikanzniveau beträgt $\alpha=0.05$. Die Teststärke soll mindesten $1-\beta=0.95$ betragen. Es werden zwei Gruppen für den Faktor Bindung benötigt (sicher und unsicher).
 
-Für die Beantwortung des Zusammenhangs zwischen Medienverhalten und subjektiven Wohlbefinden wird eine lineare Regressionsanalyse durchgeführt. Das Kriterium bildet das subjektive Wohlbefinden und der Prädiktor das Medienverhalten. Die Stichprobengrösse für die Beantwortung dieser Fragestellung wurde wieder mittels G*Power für eine Korrelation zweiseitig berechnet, da ein ungerichteter Zusammenhang angenommen wird. Gemäss der Einteilung von \citeA{Cohen1988a} wird ein mittlerer Effekt von $f=.3$ erwartet, was einem Korrealtionskoeffizient $r$ nach Bravais-Pearson von $|r|=.3$ entspricht. Das Signifikanzniveau beträgt $\alpha=0.05$. Die Teststärke soll mindesten $1-\beta=0.95$ betragen. Daraus ergibt sich eine Stichprobengrösse von 138 Probanden.
+Für die Beantwortung des Zusammenhangs zwischen Medienverhalten und subjektiven Wohlbefinden wird eine lineare Regressionsanalyse durchgeführt. Das Kriterium bildet das subjektive Wohlbefinden und der Prädiktor das Medienverhalten. Die Stichprobengrösse für die Beantwortung dieser Fragestellung wurde wieder mittels G*Power für eine Korrelation zweiseitig berechnet, da ein ungerichteter Zusammenhang angenommen wird. Gemäss der Einteilung von \citeA{Cohen1988a} wird ein mittlerer Effekt von $r=.3$ erwartet. Das Signifikanzniveau beträgt $\alpha=0.05$. Die Teststärke soll mindesten $1-\beta=0.95$ betragen. Daraus ergibt sich eine Stichprobengrösse von 138 Probanden.
 
 \subsubsection{Soziodemografische Daten}\label{sec:SoziodemografischeDaten}
 Bei den soziodemografischen Daten wurden folgende Parameter erfasst: Geschlecht, Jahrgang (Alter), Alter des Kindes in Monaten, Geschlecht des Kindes, brutto Familieneinkommen gemäss \citeA{NZZ2014}, Bildungsabschluss gemäss \citeA{Bfsnd}, Anzahl Personen im gleichen Haushalt, Lebensform, Anzahl Tage, an denen das Kind fremdbetreut ist und der durchschnittliche Betreuungsaufwand pro Woche.
@@ -156,7 +156,7 @@ Zur Datengewinnung wurde die von der ZHAW zur Verfügung gestellten Umfragesoftw
 
 Die Rekrutierung erfolgte im Sinne einer Gelegenheitsstichprobe, da das Ziel dieser Untersuchungen in der Erfassung der Veränderung der abhängigen Varibalen Mediennutzung anhand der unabhängigen Variablen Bindung und Stress ist und sich dieses Vorgehen als ökonomisch und praktikabel im Hinblick auf die Forschungsfrage herausstellte \cite{TUDresden2015}. Für den Versand der Umfrage wurde ein Infomail und ein Infozettel (Flyer) mit den wichtigsten Angabe zur Studie und dem Link zur Umfrage erstellt (siehe dazu \ref{app:Mailing} und \ref{app:Flyer} im Anhang). Der Flyer wurde zusätzlich in Papierform ausgedruckt. Für den Versand des Flyers und des Infomailings wurden unterschiedliche Kanäle verwendet: Einerseits wurden diese per Post für die jeweilige Auslage und den Aushang versendet, andererseits erfolgte der Versand elektronisch über Mail, Facebook-Posting und Text-Nachrichten. Zudem wurde der Flyer auf unterschiedlichen einschlägigen Webseiten publiziert. Um den Medienbruch möglichst gering zu halten, wurde wann immer möglich versucht, den Link für die Umfrage elektronisch zugänglich zu machen. 
 
-Die Rekrutierung fand an folgenden Orten und Institutionen statt (für eine detaillierte Übersicht, siehe Anhang \ref{app:Rekrutierung}: Direkt an der ZHAW, über die Elternberatungsstellen der deutschsprachigen Schweiz \cite{Sfmvb2018}, über Spitäler mit Wochenbett und Kinderärzte, über die deutschsprachigen Familienzentren \cite{NetzwerkBildung2018}, über die Anschrift aller deutschsprachiger Niederlassungen der \citeA{Elternbildung2018} und über das private Umfeld des Autors, mit der Bitte, die Umfrage im eigenen Umkreis weiter zu verteilen. Zudem wurde die Umfrage auf der Internetplattform der Elternzeitschrift \enquote{Fritz \&  Fränzi}, dem Marktplatz des Elternmagazins \enquote{Wir Eltern} und dem Forum der Internetplattform \enquote{Swissmom} publiziert.
+Die Rekrutierung fand an folgenden Orten und Institutionen statt (für eine detaillierte Übersicht, siehe Anhang \ref{app:Rekrutierung}): Direkt an der ZHAW, über die Elternberatungsstellen der deutschsprachigen Schweiz \cite{Sfmvb2018}, über Spitäler mit Wochenbett und Kinderärzte, über die deutschsprachigen Familienzentren \cite{NetzwerkBildung2018}, über die Anschrift aller deutschsprachiger Niederlassungen der \citeA{Elternbildung2018} und über das private Umfeld des Autors, mit der Bitte, die Umfrage im eigenen Umkreis weiter zu verteilen. Zudem wurde die Umfrage auf der Internetplattform der Elternzeitschrift \enquote{Fritz \&  Fränzi}, dem Marktplatz des Elternmagazins \enquote{Wir Eltern} und dem Forum der Internetplattform \enquote{Swissmom} publiziert.
 
 Um für die der Rekrutierung möglichst viele Eltern für die Teilnahme an der Umfrage zu gewinnen, wurde mittels Wettbewerb und Versuchspersonenstunden Anreize für die Teilnahme geschaffen. Beim Wettbewerb handelte es sich um Warengutscheine bei einem renomierten Onlineshop für Babybedarf von 10 x CHF 50.- (www.baby-rose.ch). Dabei wurde am Ende des Fragebogens die Möglichkeit geboten, am Wettbewerb teilzunehmen und die eigene Emailadresse für die Benachrichtigung zu hinterlegen. Am Schluss der Rekrutierungsphase wurden die Gewinner per Zufall gezogen. Dazu wurden alle Wettberwerbsteilnehmen in eine separate Liste kopiert und nummeriert. Anschlissend wurde mittels minimal Pythonskript zehn Teilnehmer randomieisert ausgewählt. Diese wurden mittels Mail über ihren Gewinn informiert. Studierende der ZHAW in Angewandter Psychologie konnten sich 0.5 Versuchspersonenstunden anrechenen lassen, wenn sie die Umfrage durchführten. 
 
@@ -211,23 +211,43 @@ Insgesamt haben 158 Personen am Wettbewerb teilgenommen, was 72.5\% der Stichpro
 \subsection{Empirische Hypothesen}\label{sec:EmpirischeHypothesen}
 Im Folgenden werden die konzeptionellen Hypothesen aus Kapitel \titleref{sec:Fragestellung} in empirische Hypothesen überführt:
 
-(1) Die Mediennutzung von sicher gebundenen Eltern ist im Durchschnitt tiefer als diejenige der unsicher gebundenen Eltern.
+(1) Die Mediennutzung von sicher gebundenen Eltern ist im Durchschnitt signifikant tiefer als diejenige der unsicher gebundenen Eltern.
 
-(2) Die Smartphonenutzung ist bei unsicher gebundenen Eltern im Durchschnitt höher als bei sicher gebundenen.
+(2) Eltern, deren Stressempfinden hoch ist, haben im Durchschnitt eine signifikant höhere Mediennutzung als Eltern, deren Stressempfindung tiefer ist.
 
-(3) Eltern, deren Stressempfinden hoch ist, haben im Durchschnitt eine höhere Mediennutzung als Eltern, deren Stressempfindung tiefer ist.
+(3) Eltern, die eine tiefe Mediennutzung vorweisen, haben im Durchschnitt ein signifikant höheres subjektives Wohlbefinden.
 
-(4) Eltern, die eine tiefe Mediennutzung vorweisen, haben im Durchschnitt ein höheres subjektives Wohlbefinden.
+(4) Das Stressempfinden und die Mediennutzung von sicher gebundenen Eltern ist im Durchschnitt signifikant tiefer als dasjenige der unsicher gebundenen Eltern.
+
 
 \subsection{Statistische Analyseverfahren}
-Für die Datenauswertung wurde in einem ersten Schritt eine deskriptive, univariate Analyse der Stichprobendaten durchgeführt. Dies ermöglichte die Erfassung möglicher Fehler bei der Datenerfassung und die Entdeckung möglicher Ausreisser im Datensatz. Dies erfolgte mittels Häufigkeitsverteilung, um die verschiedenen Merkmalsausprägungen einer Variable im Datensatz zu beschreiben, und mittels Verteilungsparameter (Lage- und Streuungsparameter). Des Weiteren wurde die Schiefe der Häufigkeitsverteilung gegenüber der Normalverteilung überprüft. Die Prüfung der Normalverteilung wurde mittels Sichtvergleich vorgenommen. Dazu wurde eine Grafik der Häufigkeitsverteilung der Stichprobendaten mit einem Bild einer Normalverteilung verglichen. Diese optische Prüfung erfolgte mit Hilfe von SPSS und der Darstellung eines Histogramms, das mit einer Häufigkeitsauszählung und der Darstellung der Normalverteilungskurve ausgegeben wurde. Ebenfalls mit SPSS wurde ein Q-Q-Diagram (Quantile-QuantilePlot) erstellt, um die Daten auf Normalverteilung zu prüfen. Das Q-Q-Diagram vergleicht Stichprobendaten mit einer Geraden, die eine Normalverteilung repräsentiert. Anschliessend an die deskriptive Analyse wurden in einem weiteren Schritt die statistischen Zusammenhänge der Stichprobendaten für die Hypothesen berechnet.
+Für die Datenauswertung wurde in einem ersten Schritt eine deskriptive, univariate Analyse der Stichprobendaten durchgeführt. Dies ermöglichte die Erfassung möglicher Fehler bei der Datenerfassung und die Entdeckung möglicher Ausreisser im Datensatz. Dies erfolgte mittels Häufigkeitsverteilung, um die verschiedenen Merkmalsausprägungen einer Variable im Datensatz zu beschreiben, und mittels Verteilungsparameter (Lage- und Streuungsparameter). 
 
-Die statistischen Hypothesen sind wie folgt:
+\textit{TBD: Voraussetzungsprüfungen für ANOVA und Lineare Regression auflisten}
 
-\textbf{Hypothese 1:}
+Des Weiteren wurde die Schiefe der Häufigkeitsverteilung gegenüber der Normalverteilung überprüft. Die Prüfung der Normalverteilung wurde mittels Sichtvergleich vorgenommen. Dazu wurde eine Grafik der Häufigkeitsverteilung der Stichprobendaten mit einem Bild einer Normalverteilung verglichen. Diese optische Prüfung erfolgte mit Hilfe von SPSS und der Darstellung eines Histogramms, das mit einer Häufigkeitsauszählung und der Darstellung der Normalverteilungskurve ausgegeben wurde. Ebenfalls mit SPSS wurde ein Q-Q-Diagram (Quantile-QuantilePlot) erstellt, um die Daten auf Normalverteilung zu prüfen. Das Q-Q-Diagram vergleicht Stichprobendaten mit einer Geraden, die eine Normalverteilung repräsentiert. Anschliessend an die deskriptive Analyse wurden in einem weiteren Schritt die statistischen Zusammenhänge der Stichprobendaten für die Hypothesen berechnet.
 
-\textbf{Hypothese 2:}
+Die Beantwortung der Hypothese 1 erfolgt mittels einfaktoriellen Varianzanalyse, engl. ANOVA (Analysis of Variance). Dabei soll das Signifikanzniveau $\alpha=0.05$ und die Teststärke mindesten $1-\beta=0.95$ betragen. Es wird ein mittlerer Effekt \cite{Cohen1988a} als inhaltlich relevant angesehen $f = 0.25$. Der Bindungsstil stellt dabei den zweistufigen Faktor, resp. die unabhängige Variable dar (Faktorstufen sicher / unsicher). Die Abhängige Variable wird mit der Mediennutzung besetzt. Die Nullhypothese $H1_{0}$ lautet: Die Bindung hat keinen signifikanten Einfluss auf die Mediennutzung. Demzufolge lautet die Alternativhypothese $H1_{1}$: Die Bindung hat einen signifikanten Einfluss auf die Mediennutzung.
 
-\textbf{Hypothese 3:}
+%Formel Hypothesen
+\begin{equation}\label{eq:Hypothese_1}
+    (H1_{0}:p>.000)~(H1_{1}:p=.000 ~ AND ~ f>=.25)
+\end{equation}
+
+Die Beantwortung der Hypothese 2 erfolgt mittels einfacher linearen Regression. Gemäss der Einteilung von \citeA{Cohen1988a} wird ein mittlerer Effekt von $f=.25$ erwartet. Das Signifikanzniveau soll $\alpha=0.05$ und die Teststärke $1-\beta=0.95$ betragen. Es soll die Regression von der Mediennutzung auf das Stressemfpinden der Eltern berechnet werden. Die Nullhypothese $H2_{0}$ lautet: Das Stressemfpinden der Eltern korreliert nicht  mit der Mediennutzung der Eltern. Die Alternativhypothese $H2_{1}$ lautet: Das Stressempfinden der Eltern korreliert mit der Mediennutzung der Eltern.
+
+%Formel Hypothesen
+\begin{equation}\label{eq:Hypothese_2}
+    (H2_{0}:p>.000)~(H2_{1}:p=.000 ~ AND ~ f>=.25)
+\end{equation}
+
+Die Beantwortung der Hypothese 3 erfolgt analog zu Hypothese 2 mittels einfacher linearen Regression. Dabei soll die Regression des subjektiven Wohlbefindens auf die Mediennutzung berechnet werden. Die Nullhypothese $H3_{0}$ lautet: Es besteht kein Zusammenhang zwischen Eltern mit einer geringen Mediennutzung und einem hohen subjektiven Wohlbefinden. Die Alternativhypothese $H3_{1}$ lautet: Es besteht ein Zusammenhang zwischen Eltern mit einer geringen Mediennutzung und einem hohen subjektiven Wohlbefinden.
+
+%Formel Hypothesen
+\begin{equation}\label{eq:Hypothese_3}
+    (H3_{0}:p>.000)~(H3_{1}:p=.000 ~ AND ~ f>=.25)
+\end{equation}
+
+Für die Beantwortung der Hypothese 4 wird eine einfaktorielle Varianzanlyse verwendet. Dabei soll das Signifikanzniveau $\alpha=0.05$ und die Teststärke mindesten $1-\beta=0.95$ betragen. Es wird ein mittlerer Effekt \cite{Cohen1988a} als inhaltlich relevant angesehen $f = 0.25$. Der Bindungsstil stellt dabei den zweistufigen Faktor, resp. die unabhängige Variable dar (Faktorstufen sicher / unsicher) dar und das Stressempfinden fliesst als Kovariate in die Berechung ein. Die Abhängige Variable wird mit der Mediennutzung besetzt. Die Nullhypothese $H4_{0}$ lautet: Die Bindung und das Stressempfinden haben keinen signifikanten Einfluss auf die Mediennutzung. Demzufolge lautet die Alternativhypothese $H4_{1}$: Die Bindung und das Stressempfinden haben einen signifikanten Einfluss auf die Mediennutzung.
 
 \textbf{Hypothese 4:}
