--- a/content/3_ergebnisse.tex
+++ b/content/3_ergebnisse.tex
@@ -115,6 +115,13 @@ Der Indexwert der Subjective Happiness Scale (SHS) $SHS~I$ beläuft sich in dies
 
 % ---------------------------------------
 \subsection{Hypothesentest} \label{sec:Hypothesentest}
+Der Hypothesentest für Hypothese 1 mittels ANOVA liefert ein nicht-signifikantes Er\-gebnis. Die Bindung von sicher und unsicher hat keinen signifikanten Einfluss auf die ge\-samte Medien\-nutzung der Stichprobe ($F$(1,202) = .144, $p$=.704, partielles $\eta^2$=.001, $n$=204). Basierend auf diesen Ergebnissen muss die Nullhypothese $H1_{0}$ angenommen werden. 
+
+Der Hypothesentest für die Hypothese 2 mittels einfacher linearer Regression liefert ein nicht signifikantes Ergebnis. Das Stressempfinden der Eltern geht somit nicht mit einer höheren Mediennutzung einher (F(1,202) = .389, $p$=.533). Die Nullhypothese $H2_{0}$ muss angenommen werden.
+
+Der Hypothesentest für die Hypothese 3 mittels einfacher linearer Regression liefert ein nicht signifikantes Ergebnis. Es gibt keinen statistischen Zusammenhang zwischen dem Stressempfinden und dem subjektiven Wohlbefinden der Stichprobe (F(1,202) = 1.837, $p$=.177).  Die Nullhypothese $H3_{0}$ muss angenommen werden.
+
+Der Hypothesentest für Hypothese 4 mittels ANOVA liefert ein nicht-signifikantes Er\-gebnis. Die Bindung von sicher und unsicher zusammen mit dem Stressempfinden haben keinen signifikanten Einfluss auf die ge\-samte Medien\-nutzung der Stichprobe ($F$(2,201) = .203, $p$=.817, partielles $\eta^2$=.002, $n$=204). Basierend auf diesen Ergebnissen muss die Nullhypothese $H4_{0}$ angenommen werden. 
 
 % ---------------------------------------
 \subsection{Zusätzliche Analysen} \label{sec:ZusätzlicheAnalysen}
