--- a/header.tex
+++ b/header.tex
@@ -21,6 +21,8 @@
 \usepackage{xcolor,colortbl}
 \usepackage{pgfplots} %balkendiagramme
 \pgfplotsset{compat=1.15}
+\usepackage[onehalfspacing]{setspace} % Zeilenabstend
+\geometry{top=25.4mm, left=25.4mm, right=25.4mm, bottom=25.4mm}
 %\usepackage{longtable}
 
 % Für Verweise innerhalb Doc (siehe https://strobelstefan.org/?p=145) -> funktioniert nicht mich package hyperref!
