Small changes and finish

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -221,11 +221,7 @@ Im Folgenden werden die konzeptionellen Hypothesen aus Kapitel \titleref{sec:Fra
 
 
 \subsection{Statistische Analyseverfahren}
-Für die Datenauswertung wurde in einem ersten Schritt eine deskriptive, univariate Analyse der Stichprobendaten durchgeführt. Dies ermöglichte die Erfassung möglicher Fehler bei der Datenerfassung und die Entdeckung möglicher Ausreisser im Datensatz. Dies erfolgte mittels Häufigkeitsverteilung, um die verschiedenen Merkmalsausprägungen einer Variable im Datensatz zu beschreiben, und mittels Verteilungsparameter (Lage- und Streuungsparameter). 
-
-\textit{TBD: Voraussetzungsprüfungen für ANOVA und Lineare Regression auflisten}
-
-Des Weiteren wurde die Schiefe der Häufigkeitsverteilung gegenüber der Normalverteilung überprüft. Die Prüfung der Normalverteilung wurde mittels Sichtvergleich vorgenommen. Dazu wurde eine Grafik der Häufigkeitsverteilung der Stichprobendaten mit einem Bild einer Normalverteilung verglichen. Diese optische Prüfung erfolgte mit Hilfe von SPSS und der Darstellung eines Histogramms, das mit einer Häufigkeitsauszählung und der Darstellung der Normalverteilungskurve ausgegeben wurde. Ebenfalls mit SPSS wurde ein Q-Q-Diagram (Quantile-QuantilePlot) erstellt, um die Daten auf Normalverteilung zu prüfen. Das Q-Q-Diagram vergleicht Stichprobendaten mit einer Geraden, die eine Normalverteilung repräsentiert. Anschliessend an die deskriptive Analyse wurden in einem weiteren Schritt die statistischen Zusammenhänge der Stichprobendaten für die Hypothesen berechnet.
+Für die Datenauswertung wurde in einem ersten Schritt eine deskriptive, univariate Analyse der Stichprobendaten durchgeführt. Dies ermöglichte die Erfassung möglicher Fehler bei der Datenerfassung und die Entdeckung möglicher Ausreisser im Datensatz. Dies erfolgte mittels Häufigkeitsverteilung, um die verschiedenen Merkmalsausprägungen einer Variable im Datensatz zu beschreiben, und mittels Verteilungsparameter (Lage- und Streuungsparameter). Des Weiteren wurde die Schiefe der Häufigkeitsverteilung gegenüber der Normalverteilung überprüft. Die Prüfung der Normalverteilung wurde mittels Sichtvergleich vorgenommen. Dazu wurde eine Grafik der Häufigkeitsverteilung der Stichprobendaten mit einem Bild einer Normalverteilung verglichen. Diese optische Prüfung erfolgte mit Hilfe von SPSS und der Darstellung eines Histogramms, das mit einer Häufigkeitsauszählung und der Darstellung der Normalverteilungskurve ausgegeben wurde. Anschliessend an die deskriptive Analyse wurden in einem weiteren Schritt die statistischen Zusammenhänge der Stichprobendaten für die Hypothesen berechnet. Für die Voraussetzungen der einfaktoriellen Varianzanalyse soll die Homogenität der Varianzen mittels Levene-Test geprüft werden. Für die Voraussetzungen der einfachen linearen Regressionsanalyse soll die Linearität des Zusammenhangs, der bedingte Erwartungswert (Gauss-Markov-Annahme 3) und die Homoskedastiziät (Gauss-Markov-Annahme 5) visuell mittels Streudiagramm geprüft werden \cite{UniversitatZurich2018}.
 
 Die Beantwortung der Hypothese 1 erfolgt mittels einfaktoriellen Varianzanalyse, engl. ANOVA (Analysis of Variance). Dabei soll das Signifikanzniveau $\alpha=0.05$ und die Teststärke mindesten $1-\beta=0.95$ betragen. Es wird ein mittlerer Effekt \cite{Cohen1988a} als inhaltlich relevant angesehen $f = 0.25$. Der Bindungsstil stellt dabei den zweistufigen Faktor, resp. die unabhängige Variable dar (Faktorstufen sicher / unsicher). Die Abhängige Variable wird mit der Mediennutzung besetzt. Die Nullhypothese $H1_{0}$ lautet: Die Bindung hat keinen signifikanten Einfluss auf die Mediennutzung. Demzufolge lautet die Alternativhypothese $H1_{1}$: Die Bindung hat einen signifikanten Einfluss auf die Mediennutzung.
 
@@ -250,4 +246,7 @@ Die Beantwortung der Hypothese 3 erfolgt analog zu Hypothese 2 mittels einfacher
 
 Für die Beantwortung der Hypothese 4 wird eine einfaktorielle Varianzanlyse verwendet. Dabei soll das Signifikanzniveau $\alpha=0.05$ und die Teststärke mindesten $1-\beta=0.95$ betragen. Es wird ein mittlerer Effekt \cite{Cohen1988a} als inhaltlich relevant angesehen $f = 0.25$. Der Bindungsstil stellt dabei den zweistufigen Faktor, resp. die unabhängige Variable dar (Faktorstufen sicher / unsicher) dar und das Stressempfinden fliesst als Kovariate in die Berechung ein. Die Abhängige Variable wird mit der Mediennutzung besetzt. Die Nullhypothese $H4_{0}$ lautet: Die Bindung und das Stressempfinden haben keinen signifikanten Einfluss auf die Mediennutzung. Demzufolge lautet die Alternativhypothese $H4_{1}$: Die Bindung und das Stressempfinden haben einen signifikanten Einfluss auf die Mediennutzung.
 
-\textbf{Hypothese 4:}
+%Formel Hypothesen
+\begin{equation}\label{eq:Hypothese_4}
+    (H4_{0}:p>.000)~(H4_{1}:p=.000 ~ AND ~ f>=.25)
+\end{equation}
